<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa200">

    <TextView
        android:id="@+id/textViewTituloRegistro"
        android:layout_width="365dp"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bordes_stylo1"
        android:fontFamily="@font/atma_bold"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/tit_registro"
        android:textColor="@color/rosa1000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="27dp"
        android:text="@string/tit_sexo"
        android:textColor="@color/rosa1000"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ptRaza"
        app:layout_constraintTop_toBottomOf="@+id/ptNombre" />

    <TextView
        android:id="@+id/tvDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="164dp"
        android:text="@string/tit_dni"
        android:textColor="@color/rosa1000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSexo" />

    <TextView
        android:id="@+id/usuarioLogeado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="13dp"
        android:textColor="@color/rosa1000"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewTituloRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptCodigo"
        android:layout_width="189dp"
        android:layout_height="24dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/caja_texto_stylo1"
        android:ems="10"
        android:hint="@string/txt_cod"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvCodigo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistro"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/ptDNI"
        android:layout_width="129dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/caja_texto_stylo1"
        android:ems="10"
        android:hint="@string/txt_dni"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvDNI"
        app:layout_constraintTop_toBottomOf="@+id/ptSexo"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/ptSexo"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/caja_texto_stylo1"
        android:ems="10"
        android:hint="@string/txt_sexo"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvSexo"
        app:layout_constraintTop_toBottomOf="@+id/ptNombre"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/tit_cod"
        android:textColor="@color/rosa1000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistro" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/tit_nombre"
        android:textColor="@color/rosa1000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCodigo" />

    <EditText
        android:id="@+id/ptNombre"
        android:layout_width="219dp"
        android:layout_height="22dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/caja_texto_stylo1"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/ptCodigo"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvRaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/tit_raza"
        android:textColor="@color/rosa1000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvFecNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/tit_fec"
        android:textColor="@color/rosa1000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRaza" />

    <EditText
        android:id="@+id/ptRaza"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/caja_texto_stylo1"
        android:ems="10"
        android:hint="@string/txt_raza"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvRaza"
        app:layout_constraintTop_toBottomOf="@+id/ptNombre"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/ptFecNac"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/caja_texto_stylo1"
        android:ems="10"
        android:hint="@string/txt_fec"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tvDNI"
        app:layout_constraintStart_toEndOf="@+id/tvFecNac"
        app:layout_constraintTop_toBottomOf="@+id/ptRaza"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="33dp"
        android:text="@string/btn_alta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptFecNac" />

    <Button
        android:id="@+id/btnModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_modif"
        app:layout_constraintStart_toEndOf="@+id/btnAlta"
        app:layout_constraintTop_toBottomOf="@+id/ptFecNac" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="34dp"
        android:text="@string/btn_borra"
        app:layout_constraintStart_toEndOf="@+id/btnModif"
        app:layout_constraintTop_toBottomOf="@+id/ptDNI" />

    <Button
        android:id="@+id/btnConsul"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_consul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlta"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnConsulTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_consulTodo"
        app:layout_constraintStart_toEndOf="@+id/btnConsul"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="191dp"
        android:layout_height="199dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsul"
        app:srcCompat="@drawable/kiri"
        android:contentDescription="@string/image" />

</androidx.constraintlayout.widget.ConstraintLayout>